name:                bytestring-encodings
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.Ascii
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
                     , bytestring 
                     , ghc-prim 
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
      TestAscii
  build-depends:
      base
    , bytestring
    , bytestring-encodings
    , hedgehog 
  default-language:    Haskell2010

benchmark microbenchmark
  type: exitcode-stdio-1.0
  build-depends:
      base
    , bytestring-encodings
    , criterion
    , bytestring
  ghc-options: -Wall -O2
  default-language: Haskell2010
  hs-source-dirs: benchmark
  main-is: Main.hs
