name:
  bytestring-encodings
version:
  0.1.0.0
synopsis:
  simple, efficient checks to see if a given bytestring adheres to a certain encoding 
description:
  'Data.ByteString.X' modules provide an efficient function 'isX :: ByteString -> Bool'
  which returns 'True' if a given ByteString adheres to a certain encoding X,
  and 'False' otherwise. 
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai1996@gmail.com
copyright:
  chessai (c) 2018 
category:
  Data 
build-type:
  Simple
extra-source-files:
  ChangeLog.md
cabal-version:
  >=1.10

library
  exposed-modules:
      Data.ByteString.Ascii
    , Data.ByteString.Utf8 
  build-depends:
      base >=4.10 && <4.11
    , bytestring 
    , ghc-prim 
  default-language:    Haskell2010
  ghc-options: -Wall -Werror

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
      Ascii
      Utf8 
  build-depends:
      base
    , bytestring
    , bytestring-encodings
    , hedgehog 
  default-language:    Haskell2010

benchmark microbenchmark
  type: exitcode-stdio-1.0
  build-depends:
      base
    , bytestring 
    , bytestring-encodings
    , gauge
    , text
  ghc-options: -Wall -Werror -O2
  default-language: Haskell2010
  hs-source-dirs: benchmark
  main-is: Main.hs
