name:                is-utf8-bytestring
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.IsUtf8 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
                     , bytestring 
                     , ghc-prim 
  -- hs-source-dirs:      
  default-language:    Haskell2010
